# messenger-api

./: README.md  main.py  pyproject.toml
app/: dependencies.py  main.py
app/core/: config.py  database.py  passwords.py  token.py
app/handlers/: account.py
app/models/: account.py
app/routers/: account.py  auth.py
app/schemas/: account.py
